notification-viewer (1.0.2)
  * Fix Thunderbird 3 compatibility
-- Feb 22 2010

notification-viewer (1.0.1)
  * Edit maxVersion to be compatible with TB3
-- Dec 21 2009

notification-viewer (1.0.0)
  * Tag version 1
  * Rename add-on
-- Apr 8 2009

notification-viewer (0.7.0)
  * Store notification data in a SQLite database
  * Fix losing notification data when message was moved from/to an IMAP folder
  * Fix moving notification message when original message was not found
  * Delivery delay can now be defined in minutes
  * Messages with notification requests are now identified and registered in the database
    when they are sent
-- Mar 27 2009