@@ -52,7 +52,7 @@ function Services() {
 	/** @type string */
 	this.extensionKey="extensions."+this.extensionName;
 	/** define current version for this extension @type string */
-	this.extensionVersion="1.0.2beta";
+	this.extensionVersion="1.0.3beta";
 	/** preferences @type Preferences */
 	this.preferences=new Preferences();
 	/** set debug mode @type boolean */
