@@ -58,7 +58,7 @@
 				<!-- Thunderbird -->
 				<em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
 				<em:minVersion>2.0</em:minVersion>
-				<em:maxVersion>3.0.*</em:maxVersion>
+				<em:maxVersion>3.1.*</em:maxVersion>
 			</rdf:Description>
 		</em:targetApplication>
 		
