@@ -1,9 +1,14 @@
+notification-viewer (1.0.3)
+  * Add Thunderbird 3.1 compatibility
+  * Fix notification info for messages displayed in tabs
+-- Jul 19 2010
+
 notification-viewer (1.0.2)
   * Fix Thunderbird 3 compatibility
 -- Feb 22 2010
 
 notification-viewer (1.0.1)
-  * Edit maxVersion to be compatible with TB3
+  * Add Thunderbird 3 compatibility
 -- Dec 21 2009
 
 notification-viewer (1.0.0)
